namespace REslava.Result;

public interface IError : IReason { }
