classDiagram
    class IReason {
        <<interface>>
        +string Message
        +Dictionary~string, object~ Tags
    }
    
    class ISuccess {
        <<interface>>
    }
    
    class IError {
        <<interface>>
    }
    
    class IResult {
        <<interface>>
        +bool IsSuccess
        +bool IsFailed
        +List~IReason~ Reasons
        +IReadOnlyList~IError~ Errors
        +IReadOnlyList~ISuccess~ Successes
    }
    
    class IResult_TValue {
        <<interface>>
        +TValue? Value
        +TValue? ValueOrDefault
    }
    
    class Reason {
        <<abstract>>
        #string Message
        +Dictionary~string, object~ Tags
        #Reason()
        +Reason(string message)
        +ToString() string
    }
    
    class Reason_TReason {
        <<abstract>>
        +Reason()
        +Reason(string message)
        +WithMessage(string message) TReason
        +WithTags(string key, object value) TReason
        +WithTags(Dictionary metadata) TReason
    }
    
    class Success {
        +Success()
        +Success(string message)
    }
    
    class Error {
        +Error()
        +Error(string message)
    }
    
    class Result {
        +bool IsSuccess
        +bool IsFailed
        +List~IReason~ Reasons
        +IReadOnlyList~IError~ Errors
        +IReadOnlyList~ISuccess~ Successes
        +Result()
        +WithSuccess(string message) Result
        +WithError(string message) Result
        +WithSuccess(Success success) Result
        +WithError(Error error) Result
        +WithSuccesses(IEnumerable successes) Result
        +WithErrors(IEnumerable errors) Result
        +ToString() string
    }
    
    class Result_TValue {
        +TValue? ValueOrDefault
        +TValue? Value
        +Result()
        -ThrowIfFailed()
        +WithValue(TValue value) Result~TValue~
        +ToString() string
    }
    
    IReason <|.. ISuccess : extends
    IReason <|.. IError : extends
    IResult <|-- IResult_TValue : extends
    
    IReason <|.. Reason : implements
    Reason <|-- Reason_TReason : extends
    Reason_TReason <|-- Success : extends~Success~
    Reason_TReason <|-- Error : extends~Error~
    Success ..|> ISuccess : implements
    Error ..|> IError : implements
    
    IResult <|.. Result : implements
    Result <|-- Result_TValue : extends
    Result_TValue ..|> IResult_TValue : implements
    
    Result o-- IReason : contains
    Result_TValue o-- TValue : contains